Fix issue where title layout breaks on mobile

--- a/src/styles/pages/_christmas-theme.scss
+++ b/src/styles/pages/_christmas-theme.scss
@@ -151,11 +151,15 @@
     .required {
       box-shadow: 4px 4px 16px #609f9f26;
     }
+
+    .search {
+      background : #e7f1f1c7 !important;
+    }
     ul {
       box-shadow: 6px 4px 16px #609f9f26;
       li {
         &.selected {
-          background: #609f9f26;
+          background: #609f9f26 !important;
           font-weight: bold;
         }
       }
